--- a/src/FastUpsertEF/FastUpsertEF.csproj
+++ b/src/FastUpsertEF/FastUpsertEF.csproj
@@ -57,6 +57,8 @@
     <Compile Include="Extentions\TypeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Set\EnhancedSet.cs" />
+    <Compile Include="Set\IEnhancedSet.cs" />
+    <Compile Include="Set\IOperationSet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
